k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cricket
  labels:
    app.kubernetes.io/name: smart-cricket-tracker
    app.kubernetes.io/part-of: asdd-devops-lab
